--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "mongoose": "^5.7.0",
         "node": "^12.10.0",
         "reflect-metadata": "^0.1.13",
+        "typegoose": "^5.9.1",
         "winston": "^3.2.1"
     },
     "devDependencies": {
