--- a/package.json
+++ b/package.json
@@ -20,27 +20,43 @@
         "start": "npm run rm-files && npm run tsc && npm run start-node"
     },
     "dependencies": {
+        "@hapi/joi": "^16.0.1",
+        "agenda": "^2.1.0",
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.1.0",
+        "event-dispatch": "^0.4.1",
         "express": "^4.17.1",
         "helmet": "^3.21.0",
         "inversify": "^5.0.1",
+        "inversify-agenda": "^1.1.0",
         "inversify-express-utils": "^6.3.2",
+        "jsonwebtoken": "^8.5.1",
+        "mailgun-js": "^0.22.0",
         "mongoose": "^5.7.1",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "winston": "^3.2.1"
     },
     "devDependencies": {
+        "@types/agenda": "^2.0.5",
         "@types/bcrypt": "^3.0.0",
         "@types/body-parser": "^1.17.1",
         "@types/chai": "^4.2.2",
+        "@types/cors": "^2.8.6",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^4.17.1",
+        "@types/hapi__joi": "^15.0.4",
         "@types/helmet": "0.0.44",
+        "@types/inversify-logger-middleware": "^2.0.0",
+        "@types/jsonwebtoken": "^8.3.3",
+        "@types/mailgun-js": "^0.22.3",
         "@types/mocha": "^5.2.7",
         "@types/mongoose": "^5.5.17",
         "@types/supertest": "^2.0.8",
+        "@types/winston": "^2.4.4",
         "chai": "^4.2.0",
+        "inversify-logger-middleware": "^3.1.0",
         "mocha": "^6.2.0",
         "nyc": "^14.1.1",
         "supertest": "^4.0.2",
