Log service implmented

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "mailgun-js": "^0.22.0",
         "mongoose": "^5.7.1",
         "reflect-metadata": "^0.1.13",
-        "winston": "^3.2.1"
+        "winston": "^3.2.1",
+        "winston-transport": "^4.3.0"
     },
     "devDependencies": {
         "@types/agenda": "^2.0.5",
