Setup jobs with Agenda

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "test-cover": "npm run rm-files && npm run nyc",
         "test": "mocha",
         "tsc": "tsc -p tsconfig.json",
+        "no-build": "npx ts-node src/index.ts",
         "start-node": "node dist/index.js",
         "start": "npm run rm-files && npm run tsc && npm run start-node"
     },
@@ -32,8 +33,10 @@
         "inversify": "^5.0.1",
         "inversify-agenda": "^1.1.0",
         "inversify-express-utils": "^6.3.2",
+        "inversify-logger-middleware": "^3.1.0",
         "jsonwebtoken": "^8.5.1",
         "mailgun-js": "^0.22.0",
+        "method-override": "^3.0.0",
         "mongoose": "^5.7.1",
         "reflect-metadata": "^0.1.13",
         "winston": "^3.2.1",
@@ -49,15 +52,14 @@
         "@types/express": "^4.17.1",
         "@types/hapi__joi": "^15.0.4",
         "@types/helmet": "0.0.44",
-        "@types/inversify-logger-middleware": "^2.0.0",
         "@types/jsonwebtoken": "^8.3.3",
         "@types/mailgun-js": "^0.22.3",
+        "@types/method-override": "0.0.31",
         "@types/mocha": "^5.2.7",
         "@types/mongoose": "^5.5.17",
         "@types/supertest": "^2.0.8",
         "@types/winston": "^2.4.4",
         "chai": "^4.2.0",
-        "inversify-logger-middleware": "^3.1.0",
         "mocha": "^6.2.0",
         "nyc": "^14.1.1",
         "supertest": "^4.0.2",
