--- a/evn.sample
+++ b/evn.sample
@@ -4,6 +4,6 @@ NODE_ENV="development"
 HOST="http://localhost:3000"
 JWT_SECRET="jhsfhjh98r5df+mc="
 MONGODB_URI="mongodb://localhost:27017/node-typescript-boilerplate"
-MAIL_API_KEY="your mail client api key"
-MAIL_API_DOMAIN="your mail client domoain"
+MAILGUN_API_KEY="your mail client api key"
+MAILGUN_API_DOMAIN="your mail client domoain"
 APP_EMAIL="node-typescript-boilerplate@sample.com"
