--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "method-override": "^3.0.0",
         "mongoose": "^5.7.1",
         "reflect-metadata": "^0.1.13",
+        "typegoose": "^5.9.1",
         "winston": "^3.2.1",
         "winston-transport": "^4.3.0"
     },
