--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "dependencies": {
         "@hapi/joi": "^16.0.1",
+        "@hasezoey/typegoose": "^5.9.2",
+        "@types/http-status-codes": "^1.2.0",
         "agenda": "^2.1.0",
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
@@ -31,6 +33,7 @@
         "event-dispatch": "^0.4.1",
         "express": "^4.17.1",
         "helmet": "^3.21.0",
+        "http-status-codes": "^1.3.2",
         "inversify": "^5.0.1",
         "inversify-agenda": "^1.1.0",
         "inversify-express-utils": "^6.3.2",
@@ -40,7 +43,6 @@
         "method-override": "^3.0.0",
         "mongoose": "^5.7.1",
         "reflect-metadata": "^0.1.13",
-        "typegoose": "^5.9.1",
         "winston": "^3.2.1",
         "winston-transport": "^4.3.0"
     },
