--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "nyc": "nyc -r=text -r=html -i ts-node/register/transpile-only -e .ts mocha",
         "rm-files": "rm -r -f coverage .nyc_output dist",
         "start": "npm run rm-files && npm run tsc && npm run start-node",
+        "debug": "nodemon -e ts --exec \"npx ts-node -T --pretty --project tsconfig.json src/index.ts\"",
         "start-node": "node dist/index.js",
         "test": "mocha",
         "test-debug": "mocha -w",
@@ -23,22 +24,23 @@
         "tsc": "tsc -p tsconfig.json"
     },
     "dependencies": {
-        "@hapi/joi": "^16.0.1",
+        "@hapi/joi": "^16.1.4",
         "@hasezoey/typegoose": "^5.9.2",
         "agenda": "^2.1.0",
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
+        "class-transformer": "^0.2.3",
+        "class-validator": "^0.10.1",
         "cors": "^2.8.5",
         "dotenv": "^8.1.0",
         "event-dispatch": "^0.4.1",
         "express": "^4.17.1",
-        "helmet": "^3.21.0",
+        "helmet": "^3.21.1",
         "http-status-codes": "^1.3.2",
         "inversify": "^5.0.1",
         "inversify-agenda": "^1.1.0",
         "inversify-express-utils": "^6.3.2",
         "inversify-logger-middleware": "^3.1.0",
-        "json2typescript": "^1.2.3",
         "jsonwebtoken": "^8.5.1",
         "mailgun-js": "^0.22.0",
         "method-override": "^3.0.0",
@@ -51,26 +53,27 @@
         "@types/agenda": "^2.0.5",
         "@types/bcrypt": "^3.0.0",
         "@types/body-parser": "^1.17.1",
-        "@types/chai": "^4.2.2",
+        "@types/chai": "^4.2.3",
         "@types/cors": "^2.8.6",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^4.17.1",
         "@types/hapi__joi": "^15.0.4",
         "@types/helmet": "0.0.44",
         "@types/http-status-codes": "^1.2.0",
-        "@types/jsonwebtoken": "^8.3.3",
+        "@types/jsonwebtoken": "^8.3.4",
         "@types/mailgun-js": "^0.22.3",
         "@types/method-override": "0.0.31",
         "@types/mocha": "^5.2.7",
-        "@types/mongoose": "^5.5.17",
+        "@types/mongoose": "^5.5.18",
         "@types/supertest": "^2.0.8",
         "@types/winston": "^2.4.4",
         "chai": "^4.2.0",
         "mocha": "^6.2.0",
-        "mongodb-memory-server": "^5.2.3",
+        "mongodb-memory-server": "^5.2.5",
+        "nodemon": "^1.19.2",
         "nyc": "^14.1.1",
         "supertest": "^4.0.2",
-        "ts-node": "^8.3.0",
+        "ts-node": "^8.4.1",
         "typescript": "^3.6.3"
     }
 }
