--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
         "esModuleInterop": true,
         "allowUnreachableCode": false,
         "noImplicitThis": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "baseUrl": "src",
+        "paths": {
+            "@ui/*": ["ui/*"],
+            "@domain/*": ["domain/*"],
+            "@infrastructure/*": ["infrastructure/*"]
+        }
     },
     "include": ["./src/**/*.ts", "./src/types/*"],
     "exclude": ["node_modules"]
