--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,18 @@
 {
     "env": {
         "browser": true,
-        "es6": true,
-        "mocha": true
+        "mocha": true,
+        "node": true,
+        "es6": true
     },
-    "extends": ["airbnb-base"],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["chai-friendly"],
+    "extends": [
+        "airbnb-base",
+        "plugin:@typescript-eslint/recommended",
+        "prettier",
+        "prettier/@typescript-eslint"
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -13,5 +21,45 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
-    "rules": {}
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            }
+        }
+    },
+    "rules": {
+        "comma-dangle": 0,
+        "consistent-return": 0,
+        "implicit-arrow-linebreak": ["off"],
+        "no-param-reassign": 0,
+        "import/no-named-default": "off",
+        "no-dupe-class-members": 0,
+        "no-underscore-dangle": 0,
+        "no-shadow": 0,
+        "no-useless-constructor": 0,
+        "no-console": 0,
+        "no-plusplus": 0,
+        "no-unused-expressions": 0,
+        "no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "next"
+            }
+        ],
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "next"
+            }
+        ],
+        "chai-friendly/no-unused-expressions": 2,
+        "semi": ["error", "always"],
+        "quotes": ["error", "double"],
+        "lines-between-class-members": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/interface-name-prefix": "off",
+        "@typescript-eslint/no-inferrable-types": "off"
+    }
 }
