--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "test": "ts-mocha --paths",
         "test-debug": "ts-mocha --paths -w",
         "test-cover": "npm run rm-files && npm run nyc",
-        "tsc": "tsc -p tsconfig.json"
+        "tsc": "tsc -p tsconfig.json",
+        "lint": "eslint \"**/*.ts\""
     },
     "dependencies": {
         "@hapi/joi": "^16.1.5",
@@ -68,10 +69,19 @@
         "@types/mongoose": "^5.5.19",
         "@types/supertest": "^2.0.8",
         "@types/winston": "^2.4.4",
+        "@typescript-eslint/eslint-plugin": "^2.3.2",
+        "@typescript-eslint/parser": "^2.3.2",
         "chai": "^4.2.0",
+        "eslint": "^6.5.1",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-config-prettier": "^6.3.0",
+        "eslint-plugin-chai-friendly": "^0.4.1",
+        "eslint-plugin-import": "^2.18.2",
         "mocha": "^6.2.1",
+        "mongodb-memory-server": "^5.2.6",
         "nodemon": "^1.19.3",
         "nyc": "^14.1.1",
+        "prettier": "^1.18.2",
         "supertest": "^4.0.2",
         "ts-mocha": "^6.0.0",
         "ts-node": "^8.4.1",
