Fix linting warnings/errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
         "no-dupe-class-members": 0,
         "no-underscore-dangle": 0,
         "no-shadow": 0,
+        "max-classes-per-file": 0,
+        "class-methods-use-this": 0,
         "no-useless-constructor": 0,
         "no-console": 0,
         "no-plusplus": 0,
