--- a/package.json
+++ b/package.json
@@ -10,6 +10,30 @@
     "license": "MIT",
     "author": "Fortune Ochi <fortuneochi@gmail.com>",
     "main": "index.ts",
+    "nyc": {
+        "include": [
+            "src/**/*.ts"
+        ],
+        "extension": [
+            ".ts"
+        ],
+        "exclude": [
+            "**/*.d.ts"
+        ],
+        "require": [
+            "ts-node/register"
+        ],
+        "reporter": [
+            "text",
+            "html"
+        ],
+        "all": true,
+        "check-coverage": true,
+        "statements": 50,
+        "functions": 50,
+        "branches": 50,
+        "lines": 50
+    },
     "scripts": {
         "no-build": "npx ts-node src/index.ts",
         "non-build:start": "npx ts-code src/index.ts",
@@ -22,7 +46,8 @@
         "test-debug": "ts-mocha --paths -w",
         "test-cover": "npm run rm-files && npm run nyc",
         "tsc": "tsc -p tsconfig.json",
-        "lint": "eslint \"**/*.ts\""
+        "lint": "eslint \"**/*.ts\"",
+        "build": "npm run lint && npm run ts"
     },
     "dependencies": {
         "@hapi/joi": "^16.1.5",
@@ -77,6 +102,7 @@
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-chai-friendly": "^0.4.1",
         "eslint-plugin-import": "^2.18.2",
+        "ghooks": "^2.0.4",
         "mocha": "^6.2.1",
         "mongodb-memory-server": "^5.2.6",
         "nodemon": "^1.19.3",
@@ -86,5 +112,11 @@
         "ts-mocha": "^6.0.0",
         "ts-node": "^8.4.1",
         "typescript": "^3.6.3"
+    },
+    "config": {
+        "ghooks": {
+            "pre-commit": "npm run lint",
+            "pre-push": "npm run test"
+        }
     }
 }
