--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "config": {
         "ghooks": {
             "pre-commit": "npm run lint",
-            "pre-push": "npm run test"
+            "pre-push": "npm run nyc"
         }
     }
 }
