--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     },
     "scripts": {
         "no-build": "npx ts-node src/index.ts",
+        "postinstall": "npm run build",
         "non-build:start": "npx ts-code src/index.ts",
         "nyc": "nyc -r=text -r=html -i ts-node/register/transpile-only -e .ts mocha",
         "rm-files": "rm -r -f coverage .nyc_output dist",
