--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ cache:
     directories:
         - "node_modules"
 script:
-    - npm run test
-    - npm run build
-after_success:
-    - npm run nyc
+    - npm run lint
+    - npm run test-cover
+    - npm run tsc
