--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
         "implicit-arrow-linebreak": ["off"],
         "no-param-reassign": 0,
         "import/no-named-default": "off",
+        "import/prefer-default-export": 0,
+        "import/no-default-export": 2,
         "no-dupe-class-members": 0,
         "no-underscore-dangle": 0,
         "no-shadow": 0,
