Fix linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,6 +64,7 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/interface-name-prefix": "off",
-        "@typescript-eslint/no-inferrable-types": "off"
+        "@typescript-eslint/no-inferrable-types": "off",
+        "eqeqeq": ["error", "smart"]
     }
 }
