--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "debug": "nodemon -e ts --exec \"npx ts-node -r tsconfig-paths/register -T --pretty --project tsconfig.json src/index.ts\"",
         "start-node": "node dist/index.js",
         "test": "ts-mocha --paths",
-        "test-debug": "nodemon  -e ts --exec \"ts-mocha --paths\"",
+        "test-watch": "nodemon  -e ts --exec \"ts-mocha --paths\"",
         "test-cover": "npm run rm-files && npm run nyc",
         "tsc": "tsc -p tsconfig.json",
         "lint": "eslint \"**/*.ts\"",
@@ -106,7 +106,7 @@
         "eslint-plugin-import": "^2.18.2",
         "ghooks": "^2.0.4",
         "mocha": "^6.2.1",
-        "mongodb-memory-server": "^5.2.6",
+        "mongodb-memory-server": "^5.2.7",
         "nodemon": "^1.19.3",
         "nyc": "^14.1.1",
         "prettier": "^1.18.2",
