Implement soft delete feature. Closes #56

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "nyc": "nyc npm run test",
         "rm-files": "rm -r -f coverage .nyc_output dist",
         "start": "npm run rm-files && npm run tsc && npm run start-node",
-        "debug": "nodemon -e ts --exec \"npx ts-node -r tsconfig-paths/register -T --pretty --project tsconfig.json src/index.ts\"",
+        "dev": "nodemon -e ts --exec \"npx ts-node -r tsconfig-paths/register -T --pretty --project tsconfig.json src/index.ts\"",
         "start-node": "node dist/index.js",
         "test": "ts-mocha --paths",
         "test-watch": "nodemon  -e ts --exec \"ts-mocha --paths\"",
@@ -54,7 +54,7 @@
         "@hapi/joi": "^16.1.7",
         "@hasezoey/typegoose": "^5.9.2",
         "agenda": "^2.1.0",
-        "automapper-nartc": "^3.0.21",
+        "automapper-nartc": "^3.0.23",
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
         "class-transformer": "^0.2.3",
@@ -86,7 +86,7 @@
         "@types/cors": "^2.8.6",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^4.17.1",
-        "@types/hapi__joi": "^15.0.4",
+        "@types/hapi__joi": "^16.0.0",
         "@types/helmet": "0.0.44",
         "@types/http-status-codes": "^1.2.0",
         "@types/jsonwebtoken": "^8.3.4",
@@ -106,7 +106,7 @@
         "eslint-plugin-import": "^2.18.2",
         "ghooks": "^2.0.4",
         "mocha": "^6.2.1",
-        "mongodb-memory-server": "^5.2.7",
+        "mongodb-memory-server": "^5.2.8",
         "nodemon": "^1.19.3",
         "nyc": "^14.1.1",
         "prettier": "^1.18.2",
