--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "mongoose": "^5.7.4",
         "reflect-metadata": "^0.1.13",
         "tsconfig-paths": "^3.9.0",
+        "tsoa": "^2.5.6",
         "winston": "^3.2.1",
         "winston-transport": "^4.3.0"
     },
