--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "method-override": "^3.0.0",
         "mongoose": "^5.7.4",
         "reflect-metadata": "^0.1.13",
+        "swagger-ui-express": "^4.1.2",
         "tsconfig-paths": "^3.9.0",
         "tsoa": "^2.5.6",
         "winston": "^3.2.1",
