--- a/env.sample
+++ b/env.sample
@@ -2,7 +2,7 @@
 PORT=3000
 LOG_LEVEL="debug"
 NODE_ENV="development"
-HOST="http://localhost:3000"
+HOST="localhost:3000"
 APP_EMAIL="node-typescript-boilerplate@sample.com"
 
 # Random JWT string
