Sample swagger doc integration/implementation (#2, #66)
* Updated BaseEntity navigation properties to reference User type

* Used auto mapper's array mapper for mapping array to DTO

* Removed vscode local settings from version control

* Updated createdBy field in user entity

* Added user auto mapper profile

* Added user auto mapper profile

* Updated package.json and set tenant and user globally. Closes #16, closes #17

* Implement save or update feature. Closes #11

* Moved hooks to base entity class and implemented soft-delete

* Implement soft delete feature. Closes #56

* Fixed #63, and refactor some part of test files (#14)

* A sample swagger integration/implementation (#2)

* A sample swagger integration/implementation (#2)

* Fix breaking change

* Implement auto swagger generation

* Sample swagger doc integration/implementation #2 #66

--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
         "rm-files": "rm -r -f coverage .nyc_output dist",
         "start": "npm run rm-files && npm run tsc && npm run start-node",
         "dev": "nodemon -e ts --exec \"npx ts-node -r tsconfig-paths/register -T --pretty --project tsconfig.json src/index.ts\"",
-        "start-node": "node dist/index.js",
+        "start-node": "node dist/src/index.js",
         "test": "ts-mocha --paths",
-        "test-watch": "nodemon  -e ts --exec \"ts-mocha --paths\"",
+        "test-watch": "nodemon -e ts --exec \"ts-mocha --paths\"",
         "test-cover": "npm run rm-files && npm run nyc",
         "tsc": "tsc -p tsconfig.json",
         "lint": "eslint \"**/*.ts\"",
-        "build": "npm run lint && npm run tsc"
+        "build": "npm run lint && npm run tsc",
+        "tsoa:gen": "npm tsoa swagger -c ./src/ui/api/tsoa.json && npm tsoa routes -c ./src/ui/api/tsoa.json"
     },
     "dependencies": {
         "@hapi/joi": "^16.1.7",
@@ -67,6 +68,7 @@
         "http-status-codes": "^1.3.2",
         "inversify": "^5.0.1",
         "inversify-agenda": "^1.1.0",
+        "inversify-binding-decorators": "^4.0.0",
         "inversify-express-utils": "^6.3.2",
         "inversify-logger-middleware": "^3.1.0",
         "jsonwebtoken": "^8.5.1",
@@ -74,6 +76,7 @@
         "method-override": "^3.0.0",
         "mongoose": "^5.7.4",
         "reflect-metadata": "^0.1.13",
+        "swagger-ui-express": "^4.1.2",
         "tsconfig-paths": "^3.9.0",
         "tsoa": "^2.5.6",
         "winston": "^3.2.1",
@@ -96,6 +99,7 @@
         "@types/mocha": "^5.2.7",
         "@types/mongoose": "^5.5.20",
         "@types/supertest": "^2.0.8",
+        "@types/swagger-ui-express": "^3.0.1",
         "@types/winston": "^2.4.4",
         "@typescript-eslint/eslint-plugin": "^2.3.3",
         "@typescript-eslint/parser": "^2.3.3",
