added user lockout test

--- a/env.sample
+++ b/env.sample
@@ -4,6 +4,8 @@ LOG_LEVEL="debug"
 NODE_ENV="development"
 HOST="localhost:3000"
 APP_EMAIL="node-typescript-boilerplate@sample.com"
+APP_MAX_LOGIN_ATTEMPTS=5
+APP_INITIAL_LOCKOUT_TIME=5  #in minutes (increases exponentially on successive failed login attempts)
 
 # Random JWT string
 JWT_SECRET="akdGDFHG=-0FDDASjDrff="
