--- a/env.sample
+++ b/env.sample
@@ -5,7 +5,7 @@ NODE_ENV="development"
 HOST="localhost:3000"
 APP_EMAIL="node-typescript-boilerplate@sample.com"
 APP_MAX_LOGIN_ATTEMPTS=5
-APP_INITIAL_LOCKOUT_TIME=5  #in minutes (increases exponentially on successive failed login attempts)
+APP_LOCKOUT_TIME=5  #in minutes
 
 # Random JWT string
 JWT_SECRET="akdGDFHG=-0FDDASjDrff="
