Added 'InsertMany' util method

--- a/env.sample
+++ b/env.sample
@@ -19,5 +19,5 @@ MAILGUN_API_KEY="Mailgun api key goes here"
 MAILGUN_API_DOMAIN="domain goes here"
 
 # Agend stuff (for cron jobs. Read more on it here https://github.com/agenda/agenda)
-AGENDA_DB_COLLECTION="AgendaJobs"
+AGENDA_DB_COLLECTION="jobs"
 AGENDA_CONCURRENCY=20
