--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 	},
 	"dependencies": {
 		"@hapi/joi": "^16.1.7",
-		"@hasezoey/typegoose": "^5.9.2",
+		"@typegoose/typegoose": "^6.0.4",
 		"agenda": "^2.1.0",
 		"bcrypt": "^3.0.6",
 		"body-parser": "^1.19.0",
@@ -86,18 +86,18 @@
 		"@types/agenda": "^2.0.6",
 		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.17.1",
-		"@types/chai": "^4.2.3",
+		"@types/chai": "^4.2.4",
 		"@types/cors": "^2.8.6",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.1",
-		"@types/hapi__joi": "^16.0.1",
+		"@types/hapi__joi": "^16.0.2",
 		"@types/helmet": "0.0.44",
 		"@types/http-status-codes": "^1.2.0",
 		"@types/jsonwebtoken": "^8.3.5",
 		"@types/mailgun-js": "^0.22.3",
 		"@types/method-override": "0.0.31",
 		"@types/mocha": "^5.2.7",
-		"@types/mongoose": "^5.5.22",
+		"@types/mongoose": "^5.5.23",
 		"@types/supertest": "^2.0.8",
 		"@types/swagger-ui-express": "^3.0.1",
 		"@types/winston": "^2.4.4",
@@ -111,7 +111,7 @@
 		"eslint-plugin-import": "^2.18.2",
 		"ghooks": "^2.0.4",
 		"mocha": "^6.2.2",
-		"mongodb-memory-server": "^5.2.9",
+		"mongodb-memory-server": "^5.2.11",
 		"nodemon": "^1.19.4",
 		"nyc": "^14.1.1",
 		"prettier": "^1.18.2",
