Added required endpoints for authentication

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ JWT_SECRET="53a489da5d37195e91f83f65ade6a5700a38a=-"
 MAX_LOGIN_ATTEMPTS=5
 LOCKOUT_DURATION_MINUTES=5
 PORT=3000
+APP_EMAIL="node-typescript-boilerplate@email.com"
