--- a/development.env
+++ b/development.env
@@ -5,3 +5,4 @@ JWT_SECRET="cf522bc000c08de5ba7dd5bee0b283afd52c3138"
 MAX_LOGIN_ATTEMPTS=5
 LOCKOUT_DURATION_MINUTES=5
 PORT=3000
+APP_EMAIL="node-typescript-boilerplate@email.com"
