--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,11 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
+  "configurations": [{
       "type": "node",
       "name": "vscode-jest-tests",
       "request": "launch",
-      "args": ["--runInBand"],
+      "args": ["--runInBand", "--detectOpenHandles"],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
