--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watch --runInBand --detectOpenHandles",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
@@ -23,17 +23,18 @@
   },
   "dependencies": {
     "@hapi/joi": "^16.1.8",
-    "@nestjs/common": "^6.10.2",
-    "@nestjs/core": "^6.10.2",
+    "@nestjs/common": "^6.10.5",
+    "@nestjs/core": "^6.10.5",
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.10.2",
+    "@nestjs/passport": "^6.1.1",
+    "@nestjs/platform-express": "^6.10.4",
     "@nestjs/swagger": "^3.1.0",
     "@nestjsx/crud": "^4.2.0",
     "@nestjsx/crud-typeorm": "^4.2.0",
-    "@typegoose/typegoose": "^6.1.5",
+    "@typegoose/typegoose": "^6.1.6",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
     "cache-manager": "^2.10.1",
     "class-transformer": "^0.2.3",
@@ -44,7 +45,7 @@
     "express-rate-limit": "^5.0.0",
     "express-session": "^1.17.0",
     "helmet": "^3.21.2",
-    "mongoose": "^5.7.12",
+    "mongoose": "^5.7.13",
     "nest-schedule": "^0.6.3",
     "nestjs-command": "^1.3.0",
     "nestjs-typegoose": "^7.0.0",
@@ -58,9 +59,9 @@
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/cli": "^6.12.3",
-    "@nestjs/schematics": "^6.7.3",
-    "@nestjs/testing": "^6.10.2",
+    "@nestjs/cli": "^6.12.6",
+    "@nestjs/schematics": "^6.7.5",
+    "@nestjs/testing": "^6.10.5",
     "@shelf/jest-mongodb": "^1.1.3",
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
@@ -82,7 +83,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.1.1",
-    "ts-node": "^8.5.3",
+    "ts-node": "^8.5.4",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
