--- a/test.env
+++ b/test.env
@@ -6,3 +6,6 @@ MAX_LOGIN_ATTEMPTS=3
 LOCKOUT_DURATION_MINUTES=3
 PORT=3000
 APP_EMAIL="node-typescript-boilerplate@email.com"
+PACKAGE_BASE_URL="https://travela-third-party-service.azurewebsites.net"
+PACKAGE_EMAIL="ademolajhon@gmail.com"
+PACKAGE_PASSWORD="Password123"
